# choeur-argentine

./: CONTRIBUTING.md  HISTORY.md  README.md  deploy.py  index.html  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.run/: All tests.run.xml  Generate docs.run.xml
2025-2026/: a_este_sol_peregrino.ly  altoza.ly  burrito.ly  coflades.ly  convidando.ly  eso_rigo.ly  hanacpachap.ly  navidad-1-anunciacion.ly  navidad-4-los_pastores.ly  xicochi.ly  zipoli-1-kyrie.ly  zipoli-2-gloria.ly  zipoli-3-credo.ly  zipoli-4-sanctus.ly
a_este_sol_peregrino/: a_este_sol_peregrino.midi
bonita/: bonita.midi
burrito/: burrito.midi
choeur_argentine/: __init__.py  index.tpl
coflades/: coflades.midi
convidando/: convidando.midi
dicotomia/: dicotomia-alt.midi  dicotomia-bass.midi  dicotomia-sop.midi  dicotomia-ten.midi  dicotomia.midi
docs/: conf.py  index.rst  installation.rst  usage.rst
dona/: dona.midi
eso_rigo/: eso_rigo.midi
hanacpachap/: hanacpachap.midi
html/: index.html
js/: MIDIParser.js  MIDIPlayer.js  Mixer.js  Visualizer.js  app.js
lilypond/: bonita.ly  dicotomia.ly  dona.ly  lunes.ly  miedo.ly  misa-1-kyrie.ly  misa-2-gloria.ly  misa-3-credo.ly  navidad-2-perigrenacion.ly  paloma.ly  tonada.ly
lunes/: lunes.midi
miedo/: miedo-alt.midi  miedo-bass.midi  miedo-sop.midi  miedo-ten.midi  miedo.midi
misa-1-kyrie/: misa-1-kyrie-alt.midi  misa-1-kyrie-bass.midi  misa-1-kyrie-sop.midi  misa-1-kyrie-ten.midi  misa-1-kyrie.midi
misa-2-gloria/: misa-2-gloria-alt.midi  misa-2-gloria-ten.midi  misa-2-gloria.midi
misa-3-credo/: misa-3-credo-alt.midi  misa-3-credo-bass.midi  misa-3-credo-sop.midi  misa-3-credo-ten.midi  misa-3-credo.midi
misa-4-sanctus/: misa-4-sanctus-alt.midi  misa-4-sanctus-bass.midi  misa-4-sanctus-sop.midi  misa-4-sanctus-ten.midi  misa-4-sanctus.midi
misa-5-agnus/: misa-5-agnus-alt.midi  misa-5-agnus-bass.midi  misa-5-agnus-sop.midi  misa-5-agnus-ten.midi  misa-5-agnus.midi
navidad-1-anunciacion/: navidad-1-anunciacion-alt.midi  navidad-1-anunciacion-bass.midi  navidad-1-anunciacion-sop.midi  navidad-1-anunciacion-ten.midi  navidad-1-anunciacion.midi
navidad-2-perigrenacion/: navidad-2-perigrenacion-alt.midi  navidad-2-perigrenacion-bass.midi  navidad-2-perigrenacion-sop.midi  navidad-2-perigrenacion.midi
navidad-3-el_nacimiento/: navidad-3-el_nacimiento-alt.midi  navidad-3-el_nacimiento-bass.midi  navidad-3-el_nacimiento-sop.midi  navidad-3-el_nacimiento-ten.midi  navidad-3-el_nacimiento.midi
navidad-4-los_pastores/: navidad-4-los_pastores-alt.midi  navidad-4-los_pastores-bass.midi  navidad-4-los_pastores-sop.midi  navidad-4-los_pastores-ten.midi  navidad-4-los_pastores.midi
navidad-5-los_reyes_magos/: navidad-5-los_reyes_magos-alt.midi  navidad-5-los_reyes_magos-bass.midi  navidad-5-los_reyes_magos-sop.midi  navidad-5-los_reyes_magos-ten.midi  (+1 more)
styles/: main.css  (+1 more)
(+32 files in other folders)
