[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "choeur-argentine"
version = "0.3.0"
description = "Répertoire Github du Choeur de la Maison de l'Argentine (fichiers sources lilypond)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
license = "MIT"
keywords = ["lilypond", "music", "choir", "midi", "mp3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ffmpeg-normalize>=1.35.0",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/balouf/choeur-argentine"
